--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "libs/Signals"]
 	path = libs/Signals
-	url = https://github.com/a-n-t-h-o-n-y/Signals
-	branch = master
+	url = https://github.com/RyanDraves/Signals.git
+	branch = ryans_branch_or_something_like_that
 [submodule "demos/chess"]
 	path = demos/chess
-	url = https://github.com/a-n-t-h-o-n-y/Chess-curses.git
-	branch = master
+	url = https://github.com/RyanDraves/Chess-curses.git
+	branch = ryans_branch_or_something_like_that
